Iteration 2 Private Page

--- a/starter_code/views/layout.hbs
+++ b/starter_code/views/layout.hbs
@@ -11,6 +11,9 @@
     <a href="/">Home</a>
     <a href="/signup">Signup</a>
     <a href="/login">Login</a>
+    <a href="/private-page">Private</a>
+
+    <a href="/logout">logout</a>
   </nav>
   {{{body}}}
 
